added place order functionality

--- a/src/app/restaurant/style.css
+++ b/src/app/restaurant/style.css
@@ -1,4 +1,4 @@
-.header-wrapper{
+/* .header-wrapper{
     display: flex;
     justify-content: space-between;
 }
@@ -33,4 +33,4 @@
     padding: 8px;
     color: red;
     font-size: 13px; 
-}
+} */
