--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,6 +95,7 @@ table img {
   border-radius: 4px;
   margin: auto;
   width: 60%;
+  border: none;
 }
 .select-input {
   height: 40px;
@@ -211,7 +212,7 @@ justify-content: flex-start;
   font-weight: bold;
 }
 .total-wrapper .block-1{
-  width: 70%;
+  width: 70%;    
 }
 .total-wrapper .block-2{
   width: 30%;
